# ihear

./: .gitignore  AGENTS.md  README.md  ihear.spec  pyproject.toml
ihear/: __init__.py  __main__.py  cli.py  config.py  menubar.py  models.py  onboarding.py  settings_ui.py  storage.py  summarizer.py  transcriber.py  waveform.py
ihear/api/: __init__.py
scripts/: run-gpu.sh  setup_gpu_server.sh
tests/: test_config.py  test_storage.py  test_summarizer.py
